# model-sales-val

./: .env  .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  .test.yaml  LICENSE  QC_salesval_nbhds_round2.xlsx  README.md  deploy-terraform.sh  design_discussion.md  download.py  download1.py  download_card.py  dvc.yaml  environment.yml  exclusivity_question.md  explore.ipynb  flagging.py  flagging_run.py  get_data.py  human.csv  initial_flagging.py  inputs.yaml  main.tf  outliers.ipynb  place_s3.py  pyproject.toml  requirements.txt  strings.ipynb  transform_migrate.py
.dvc/: config
data_comparison/: window_comparison.ipynb
explore/: download.py  explore.ipynb  strings.ipynb
glue/: flagging_glue.py  glue_py_test.py  initial_flagging.py  inputs_glue.yaml  job.py  recurrent.py  sales-val-flagging.json  sales-val-flagging.py  sales_val_flagging.py
group_data/: res_condos_nbhd_groups_2024.xlsx
initial_run_local/: initial_flagging.py  manual_update.py
local_testing/: initial_flagging.py  recurrent.py  recurrent_local.py
manual_flagging/: flagging.py  initial_flagging.py  inputs_update.yaml  manual_update.py  recurring_local.py  requirements.txt
metadata/: metadata_initial.py
migrations/: 0001_update_metadata_structure_after_2023_flag_update.py  0002_update_outlier_column_structure_w_iasworld_2024_update.py  0003_fix_is_ptax_outlier_col.py  0004_remove_mydec_flags.py  0004_update_sd_bounds_config_structure.py  0005_retroactively_add_dvc_md5_hash_and_fix_sd_bounds.py  0006_fix_json_quoting_formatting_in_tables.py  transform_migrate.py
src/: 01_flag.py  (+10 more)
(+22 files in other folders)
